--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="top-bar">
 <div class="top-bar-left">
 <ul class="menu">
-<li class="menu-text">Yeti Agency</li>
+<li class="menu-text">Mamba Memorial</li>
 <li><a href="#">One</a></li>
 <li><a href="#">Two</a></li>
 </ul>
@@ -31,7 +31,7 @@
 
 <div class="callout large">
 <div class="row column text-center">
-<h1>Changing the World Through Design</h1>
+<h1>Remembering a Legend</h1>
 <p class="lead">Those who are dead may never die.</p>
 <a href="#" class="button large">Learn More</a>
 <a href="#" class="button large hollow">Learn Less</a>
@@ -42,7 +42,7 @@
 <img class="thumbnail" src="https://placehold.it/750x350">
 </div>
 <div class="medium-6 columns medium-pull-6">
-<h2>Our Agency, our selves.</h2>
+<h2>The Life of a Legend</h2>
 <p>ro. Kobe really was that dude, he was the man with the work ethic not seen before</p>
 </div>
 </div>
