--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Foundation | Welcome</title>
+<title>Memorial | Welcome</title>
 <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>The Life of a Legend</h2>
-<p>ro. Kobe really was that dude, he was the man with the work ethic not seen before</p>
+<p>Kobe really was that dude, he was the man with the work ethic not seen before.</p>
 </div>
 </div>
 <div class="row">
