--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Memorial | Welcome</title>
-<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<link rel="stylesheet" href="kobe-bryant-and-his-daughter-gianna-bryant-attend-a-news-photo-1580074719.jpg">
 </head>
 <body>
 
