--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
 <div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="https://placehold.it/750x350">
+<img class="thumbnail" src="https://images.app.goo.gl/CVM9M6t64pzZq6AGA">
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>The Life of a Legend</h2>
