--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="top-bar-left">
 <ul class="menu">
 <li class="menu-text">Mamba Memorial</li>
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
+<li><a href="#">Kobe Bryant</a></li>
+<li><a href="#">Gianna Bryant</a></li>
 </ul>
 </div>
 <div class="top-bar-right">
