--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
 <div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="https://images.app.goo.gl/CVM9M6t64pzZq6AGA">
+<img class="thumbnail" src=![5881246_012620ccgettykobegianna7img](https://user-images.githubusercontent.com/59981303/73287538-ff3cfc80-41be-11ea-850b-e39f4dc539d4.jpg)>
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>The Life of a Legend</h2>
