--- a/index.html
+++ b/index.html
@@ -39,36 +39,34 @@
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>The Life of a Legend</h2>
-<p>Kobe really was that dude, he was the man with the work ethic not seen before.</p>
+<p>In a 2008 interview, he spoke to his positive attitude. “Have a good time. Life is too short to get bogged down and be discouraged. You have to keep moving. You have to keep going. Put one foot in front of the other, smile and just keep on rolling.-Kobe Bryant"</p>
 </div>
 </div>
 <div class="row">
 <div class="medium-4 columns">
-<h3>Photoshop</h3>
-<p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+<h3>NBA Carrer</h3>
+<p>This remarkable player was named ‘NBA Most Valuable Player’ in 2008. He has won the ‘NBA Finals MVP’ on two occasions.He led his team to victory in the ‘NBA Finals’ on five occasions. Bryant was named the ‘NBA All-Star’ on 18 occasions. He was also named ‘NBA All-Star Game MVP’ on four occasions. Just recently,he was passed by Lebron James for all-time scorrer and is now ranked at number 4 with 33643 points over a time of 20 seasons.</p>
 </div>
 <div class="medium-4 columns">
-<h3>Javascript</h3>
-<p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+<h3>After the NBA</h3>
+<p>After Kobe Bryant's retirement due to a torn achilles, the former NBA star continued to be a role model. Kobe "Bean" Bryant was not just an athlete but an artist on and off the court. In his announcment of his retirement he wrote and directed an Oscor Winning short-film called 'Dear Basketball', in which he thanks basketball for giving him an oppotunity to play the game he loves.</p>
 </div>
 <div class="medium-4 columns">
-<h3>Marketing</h3>
-<p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+<h3>The Best Dad</h3>
+<p>Kobe was not just a rolemodel for athletes, he was a rolemodel for his kids most of all. Kobe love for his daughters was never a question. Gianna and Kobe were often seen laughing or talking basketball strategies on the side of the court during NBA games. He loved his daughters and knew that were strong. Kobe recalled in an interview one time when he was asked by a fan if he was upset with not having a boy to continue his legacy, Gianna turned around and told the fan "Don't worry I got this" </p>
 </div>
 </div>
 <hr>
 <div class="row column">
 <ul class="vertical medium-horizontal menu expanded text-center">
-<li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-<li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-<li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-<li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-<li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
+<li><a href="#"><div class="stat">20</div><span>Seasons Played</span></a></li>
+<li><a href="#"><div class="stat">5</div><span>Championships</span></a></li>
+<li><a href="#"><div class="stat">Countless</div><span>People Touched</span></a></li>
 </ul>
 </div>
 <hr>
 <div class="row column">
-<h3>Our Recent Work</h3>
+<h3>Photos</h3>
 </div>
 <div class="row medium-up-3 large-up-4">
 <div class="column">
