--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <div class="row">
 <div class="medium-4 columns">
-<h3>NBA Carrer</h3>
+<h3>NBA Career</h3>
 <p>This remarkable player was named ‘NBA Most Valuable Player’ in 2008. He has won the ‘NBA Finals MVP’ on two occasions.He led his team to victory in the ‘NBA Finals’ on five occasions. Bryant was named the ‘NBA All-Star’ on 18 occasions. He was also named ‘NBA All-Star Game MVP’ on four occasions. Just recently,he was passed by Lebron James for all-time scorrer and is now ranked at number 4 with 33643 points over a time of 20 seasons.</p>
 </div>
 <div class="medium-4 columns">
